--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container">
         <div class="editor-container">
-            <textarea id="editor" placeholder="Type here..."></textarea>
+            <textarea id="editor" placeholder=></textarea>
         </div>
 
         <div class="keyboard" id="keyboard">
